--- a/Scripts/Figure_01/Figure_01.Rmd
+++ b/Scripts/Figure_01/Figure_01.Rmd
@@ -362,7 +362,7 @@ decorate_annotation("botbar", {
 })
 
 # Close the current plotting device
-dev.off()
+invisible(dev.off())
 ```
 
 ## - Plotting final result
